configurando a conexão com o BD PostgreSQL. BD já foi criado.

--- a/primeiro-exemplo/src/main/resources/application.properties
+++ b/primeiro-exemplo/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#porta do servidor para iniciar a aplicação, padrão é 8080
+server.port=8083
 
+#caminho do bd
+spring.datasource.url=jdbc:postgresql://localhost:5434/mercadinho
+spring.datasource.username=postgres
+spring.datasource.password=postgres13
+spring.datasource.driver-class-name=org.postgres.Driver
+#indica que o hibernate tem que realitar atualizações automáticas, 
+#mudando o modelo o hibernate atualiza o BD
+#obs. o hibernate segue uma ordem alfabética para nomes dos campos
+spring.jpa.hibernate.ddl-auto=update
