--- a/primeiro-exemplo/src/main/resources/application.properties
+++ b/primeiro-exemplo/src/main/resources/application.properties
@@ -2,10 +2,10 @@
 server.port=8083
 
 #caminho do bd
-spring.datasource.url=jdbc:postgresql://localhost:5434/mercadinho
+spring.datasource.url=jdbc:postgresql://localhost:5432/mercadinho
 spring.datasource.username=postgres
 spring.datasource.password=postgres13
-spring.datasource.driver-class-name=org.postgres.Driver
+spring.datasource.driver-class-name=org.postgresql.Driver
 #indica que o hibernate tem que realitar atualizações automáticas, 
 #mudando o modelo o hibernate atualiza o BD
 #obs. o hibernate segue uma ordem alfabética para nomes dos campos
