porta do server web alterada para a padrão

--- a/primeiro-exemplo/src/main/resources/application.properties
+++ b/primeiro-exemplo/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 #porta do servidor para iniciar a aplicação, padrão é 8080
-server.port=8083
+#deixar na 8080 em vez da 8083
+server.port=8080
 
 #caminho do bd
 spring.datasource.url=jdbc:postgresql://localhost:5432/mercadinho
